# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Jan 16 2025 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- The release version number has been bumped to 12.0 to avoid confusion
  with historic 11.x versions.
- Compiled and released new jar files: monetdb-jdbc-12.0.jre8.jar and
  jdbcclient.jre8.jar

* Wed Jan  8 2025 Joeri van Ruth <joeri.van.ruth@monetdbsolutions.com>
- The JDBC jar now includes JdbcClient. For backward compatibility the jar
  is still also available as jdbcclient.jreX.jar.

* Thu Nov  7 2024 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- In JdbcClient when running the \vsci or \vdbi or \vsi commands, we now
  suppress "42000 SELECT: insufficient privileges for ..." and
  "42000 SELECT: access denied for ..." error messages when the connected user
  does not have 'monetdb' or 'sysadmin' privileges, needed for some validations.

* Wed Jun 19 2024 Joeri van Ruth <joeri.van.ruth@monetdbsolutions.com>
- Implemented Connection#set/getClientInfo, and send sensible default info
  at connect time. This can be controlled with the properties 'client_info=on/off',
  'client_application=ApplicationName' and 'client_remark=Other Useful Info'.
  Note setting client info requires MonetDB server 11.51 (Aug2024) or higher.

* Thu Apr  4 2024 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected ResultSetMetaData methods getColumnTypeName(), getPrecision(),
  getColumnDisplaySize() and ParameterMetaData methods getParameterTypeName()
  and getPrecision() for the interval data types. They now return
  more precise information for the 13 possible interval data types.

* Thu Mar  7 2024 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved DatabaseMetaData.getTypeInfo(). It now also returns the serial
  and bigserial data types and all 13 possible interval data types.

* Fri Jan  5 2024 Joeri van Ruth <joeri.van.ruth@monetdbsolutions.com>